--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: jekyll-theme-minimal
+theme:theme: jekyll-theme-minimal
+logo: logoprojet.png
+description:
+github:
+ is_project_page: false
+ 
